  * autopkgtest: Add "allow-stderr" restriction to avoid failing tests because
    of the HTTP server log on stderr.

  [ James McCoy ]
  * uscan:
    + Repack the tarball and verify it is a compressed archive without
      allowing arbitrary code execution.  Fixes CVE-2013-6888.
    + Use find's -exec to call rm directly instead of piping to xargs.
      (Closes: #732006, CVE-2013-7085)

 -- Martin Pitt <mpitt@debian.org>  Thu, 12 Dec 2013 11:08:27 +0100

devscripts (2.13.8) unstable; urgency=medium

  [ James McCoy ]
  * uscan: Fix arbitrary command execution when using USCAN_EXCLUSION.
    (Closes: #731849)

  [ Adam D. Barratt ]
  * Honour USCAN_EXCLUSION.  (Closes: #731885)

 -- James McCoy <jamessan@debian.org>  Tue, 10 Dec 2013 20:26:42 -0500

devscripts (2.13.7) unstable; urgency=medium

  * Fix imports of Devscripts::Compression.  (Closes: #731847)

 -- James McCoy <jamessan@debian.org>  Tue, 10 Dec 2013 07:49:54 -0500

devscripts (2.13.6) unstable; urgency=medium

  [ James McCoy ]
  * chdist: Fix a [A-z] regex typo.
  * uscan: Properly handle a non-machine readable d/copyright file.  (Closes:
    #731537)
  * suspicious-source: Correct message when python3-magic isn't installed.
    (Closes: #731553)
  * bts:
    + Document that “bts tag nnn security” will Cc the security team.
      (Closes: #684301)
    + Document the behavior of leaving the version out of the found command.
      (Closes: #683480)
  * build-rdeps: Only match against package names instead of any substring of
    Build-Depends(-Indep).  (Closes: #649165)
  * debchange: Correct description of -e in --help output.  (Closes: #712030)
  * Update scripts to use Dpkg::Compression's compression_get_file_extension_regex().

  [ Louis Bettens ]
  * debchange, mass-bug, bts: Replace call to date -R with strftime().
    (Closes: #486594)

 -- James McCoy <jamessan@debian.org>  Mon, 09 Dec 2013 20:42:09 -0500

devscripts (2.13.5) unstable; urgency=low

  [ James McCoy ]